# lufa_test

./: .gitignore  Descriptors.h  Makefile.am  Makefile.in  MyDescriptors.c  MyDescriptors.h  VirtualSerial.c  VirtualSerial.h  compile_cmd.sh  conf.h.in  configure  configure.ac  main.c
autom4te.cache/: output.1  requests  traces.0  traces.1
