
AC_INIT(lufa_test, 1.0, me@mail.com)
AC_CONFIG_AUX_DIR(config)

AM_INIT_AUTOMAKE([foreign subdir-objects])
AC_CONFIG_HEADERS([conf.h])


AC_PROG_CC
AC_PROG_CC_STDC
AC_PROG_RANLIB
AM_PROG_AR

#AC_SEARCH_LIBS([USB_Init], [lufa], [], [AC_MSG_ERROR([unable to find the lufa library]) ])

AC_OUTPUT([Makefile
          ])
